Editar perfil front-end concluido
Carrinho quase concluido

Iniciado a edição de produtos

Corrigido problemas de conexão

Co-authored-by: RenonHG <RenonHG@users.noreply.github.com>

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ HOST='62.72.62.1';
 USER='u687609827_erick';
 PASSWORD='9hY|NFrX';
 DATABASE='u687609827_erick';
+
+# HOST='localhost';
+# USER='root';
+# PASSWORD='';
+# DATABASE='db_doces_lunares';
